--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -11,7 +11,11 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      <h4>{{ site.title }}
+        <span style="float:right;">
+          <a href="{{ "/" | absolute_url }}">Home</a>
+        </span>
+      </h4>
       {% endif %}
 
       {{ content }}
