--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -13,7 +13,11 @@
       {% if site.title and site.title != page.title %}
       <h4>{{ site.title }}
         <span style="float:right;">
-          <a href="{{ "/" | absolute_url }}">Home</a>
+          <a href="{{ "/" | absolute_url }}">Home</a> | 
+          <a href="{{ "/" | absolute_url }}">Log</a> |
+          <a href="{{ "/" | absolute_url }}">Rules</a> |
+          <a href="{{ "/" | absolute_url }}">Wiki</a> |
+          <a href="{{ "/" | absolute_url }}">Contact</a>
         </span>
       </h4>
       {% endif %}
