--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <h3>{{ site.title }} | {{ page.title }}
+      <h3 style="font-size:4vw;">{{ site.title }} | {{ page.title }}
         <span style="float:right;">
           <a href="{{ "/" | absolute_url }}">Home</a> | 
           <a href="{{ "/" | absolute_url }}">Log</a> |
