--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -23,9 +23,8 @@
         </h3>
       </div>
       <div class="menu-small">
-        <h4><span style="float:center;">{{ site.title }} | {{ page.title }}</span></h4>
         <h4>
-          <span style="float:center;">
+          <span style="text-align:center">{{ site.title }} | {{ page.title }}<br/>
             <a href="{{ "/" | absolute_url }}">Home</a> | 
             <a href="{{ "/" | absolute_url }}">Log</a> |
             <a href="{{ "/" | absolute_url }}">Rules</a> |
