--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -24,15 +24,15 @@
         </h3>
       </div>
       <div class="menu-small">
-        <h4>
-          <span style="text-align:center">{{ site.title }} | {{ page.title }}<br/>
+        <h3>
+          <span>{{ site.title }} | {{ page.title }}<br/>
             <a href="{{ "/" | absolute_url }}">Home</a> | 
             <a href="{{ "/" | absolute_url }}">Log</a> |
             <a href="{{ "/" | absolute_url }}">Rules</a> |
             <a href="{{ "/" | absolute_url }}">Wiki</a> |
             <a href="{{ "/" | absolute_url }}">Contact</a>
           </span>
-        </h4>
+        </h3>
       </div>
       {% endif %}
 
