--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -23,17 +23,14 @@
           </span>
         </h3>
       </div>
-      <div class="menu-small">
-        <h3>
-          <span>{{ site.title }} | {{ page.title }}<br/>
-            <a href="{{ "/" | absolute_url }}">Home</a> | 
-            <a href="{{ "/" | absolute_url }}">Log</a> |
-            <a href="{{ "/" | absolute_url }}">Rules</a> |
-            <a href="{{ "/" | absolute_url }}">Wiki</a> |
-            <a href="{{ "/" | absolute_url }}">Contact</a>
-          </span>
-        </h3>
-      </div>
+      <div class="menu-small"><center><h3><span>
+				{{ site.title }} | {{ page.title }}<br/>
+				<a href="{{ "/" | absolute_url }}">Home</a> | 
+				<a href="{{ "/" | absolute_url }}">Log</a> |
+				<a href="{{ "/" | absolute_url }}">Rules</a> |
+				<a href="{{ "/" | absolute_url }}">Wiki</a> |
+				<a href="{{ "/" | absolute_url }}">Contact</a>
+				</span></h3></center></div>
       {% endif %}
 
       {{ content }}
