--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="/assets/css/public.css">
-  </head>
-  <body>
-    <div class="container-lg px-3 my-5 markdown-body">
-      {% if site.title and site.title != page.title %}
-      <div class="menu-big">
-        <h3>{{ site.title }} | {{ page.title }}
-          <span style="float:right;">
-            <a href="{{ "/" | absolute_url }}">Home</a> | 
-            <a href="{{ "/" | absolute_url }}">Log</a> |
-            <a href="{{ "/" | absolute_url }}">Rules</a> |
-            <a href="{{ "/" | absolute_url }}">Wiki</a> |
-            <a href="{{ "/" | absolute_url }}">Contact</a>
-          </span>
-        </h3>
-      </div>
-      <div class="menu-small"><center><h3><span>
-				{{ site.title }} | {{ page.title }}<br/>
-				<a href="{{ "/" | absolute_url }}">Home</a> | 
-				<a href="{{ "/" | absolute_url }}">Log</a> |
-				<a href="{{ "/" | absolute_url }}">Rules</a> |
-				<a href="{{ "/" | absolute_url }}">Wiki</a> |
-				<a href="{{ "/" | absolute_url }}">Contact</a>
-				</span></h3></center></div>
-      {% endif %}
+	{% seo %}
+	<link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+	<link rel="stylesheet" href="/assets/css/public.css">
+	<link rel="shortcut icon" type="image/svg" href="/assets/images/avatar.svg">
+</head>
+<body>
+	<div class="container-lg px-3 my-5 markdown-body">
+		{% if site.title and site.title != page.title %}
+		<div class="menu-big">
+			<h3>{{ site.title }} | {{ page.title }}
+				<span style="float:right;">
+					<a href="{{ "/" | absolute_url }}">Home</a> | 
+					<a href="{{ "/" | absolute_url }}">Log</a> |
+					<a href="{{ "/" | absolute_url }}">Rules</a> |
+					<a href="{{ "/" | absolute_url }}">Wiki</a> |
+					<a href="{{ "/" | absolute_url }}">Contact</a>
+				</span>
+			</h3>
+		</div>
+		<div class="menu-small"><center><h3><span>
+			{{ site.title }} | {{ page.title }}<br/>
+			<a href="{{ "/" | absolute_url }}">Home</a> | 
+			<a href="{{ "/" | absolute_url }}">Log</a> |
+			<a href="{{ "/" | absolute_url }}">Rules</a> |
+			<a href="{{ "/" | absolute_url }}">Wiki</a> |
+			<a href="{{ "/" | absolute_url }}">Contact</a>
+			</span></h3></center></div>
+		{% endif %}
 
-      {{ content }}
+		{{ content }}
 
-      {% if site.github.private != true and site.github.license %}
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. {% github_edit_link "Improve this page" %}.
-      </div>
-      {% endif %}
-    </div>
-  </body>
+		{% if site.github.private != true and site.github.license %}
+		<div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+			This site is open source. {% github_edit_link "Improve this page" %}.
+		</div>
+		{% endif %}
+	</div>
+</body>
 </html>
