--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -8,7 +8,7 @@
 	{% seo %}
 	<link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 	<link rel="stylesheet" href="/assets/css/public.css">
-	<link rel="shortcut icon" type="image/png" href="/assets/images/avatar.png">
+	<link rel="icon" type="image/png" href="/assets/images/avatar.png">
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
