--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -14,7 +14,7 @@
 	<div class="container-lg px-3 my-5 markdown-body">
 		{% if site.title and site.title != page.title %}
 		<div class="menu-big">
-			<h3><img src="/assets/images/avatar.svg" height="1em" width="1em"></img></p>{{ site.title }} | {{ page.title }}
+			<h3><img src="/assets/images/avatar.svg" height="1em" width="1em" /></p>{{ site.title }} | {{ page.title }}
 				<span style="float:right;">
 					<a href="{{ "/" | absolute_url }}">Home</a> | 
 					<a href="{{ "/" | absolute_url }}">Log</a> |
