--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -14,7 +14,7 @@
 	<div class="container-lg px-3 my-5 markdown-body">
 		{% if site.title and site.title != page.title %}
 		<div class="menu-big">
-			<img src="/assets/images/avatar.png" height="18px" width="18px" /><h3></p>{{ site.title }} | {{ page.title }}
+			<img src="/assets/images/avatar.png" height="18px" width="18px" style="float:left" /><h3></p>{{ site.title }} | {{ page.title }}
 				<span style="float:right;">
 					<a href="{{ "/" | absolute_url }}">Home</a> | 
 					<a href="{{ "/" | absolute_url }}">Log</a> |
