--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -15,7 +15,7 @@
 		{% if site.title and site.title != page.title %}
 		<div class="menu-big">
 			<img src="/assets/images/avatar.png" height="18px" width="18px" style="float:left" /><h3></p>{{ site.title }} | {{ page.title }}
-				<span style="float:right;">
+				<span style="float:right;margins:10px 10px 0px;">
 					<a href="{{ "/" | absolute_url }}">Home</a> | 
 					<a href="{{ "/" | absolute_url }}">Log</a> |
 					<a href="{{ "/" | absolute_url }}">Rules</a> |
