--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -14,8 +14,8 @@
 	<div class="container-lg px-3 my-5 markdown-body">
 		{% if site.title and site.title != page.title %}
 		<div class="menu-big">
-			<img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left" /><h3></p>{{ site.title }} | {{ page.title }}
-				<span style="float:right;margins:0px 10px 0px;">
+			<img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left;margins:0px 10px 0px;" /><h3></p>{{ site.title }} | {{ page.title }}
+				<span style="float:right;">
 					<a href="{{ "/" | absolute_url }}">Home</a> | 
 					<a href="{{ "/" | absolute_url }}">Log</a> |
 					<a href="{{ "/" | absolute_url }}">Rules</a> |
