--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -24,7 +24,7 @@
 				</span>
 			</h3>
 		</div>
-		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left;" /><h3><span>
+		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="26px" width="26px" style="float:right;" /><h3><span>
 			&nbsp;{{ site.title }} | {{ page.title }}<br/>
 			<a href="{{ "/" | absolute_url }}">Home</a> | 
 			<a href="{{ "/" | absolute_url }}">Log</a> |
