--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -24,7 +24,7 @@
 				</span>
 			</h3>
 		</div>
-		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="56px" width="56px" style="" /><h3><span>
+		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="56px" width="56px" style="margin-top: -20px;margin-bottom: -20px;" /><h3><span>
 			&nbsp;{{ site.title }} | {{ page.title }}<br/>
 			<a href="{{ "/" | absolute_url }}">Home</a> | 
 			<a href="{{ "/" | absolute_url }}">Log</a> |
