--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -14,7 +14,7 @@
 	<div class="container-lg px-3 my-5 markdown-body">
 		{% if site.title and site.title != page.title %}
 		<div class="menu-big">
-			<img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left;vertical-align: middle;" /><h3></p>&nbsp;{{ site.title }} | {{ page.title }}
+			<img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left;vertical-align: middle;" /><h3></p>&nbsp;{{ site.title }} - {{ page.title }}
 				<span style="float:right;">
 					<a href="{{ "/" | absolute_url }}">Home</a> | 
 					<a href="{{ "/" | absolute_url }}">Log</a> |
@@ -25,7 +25,7 @@
 			</h3>
 		</div>
 		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="56px" width="56px" style="margin-top: -20px;margin-bottom: -20px;" /><h3><span>
-			&nbsp;{{ site.title }} | {{ page.title }}<br/>
+			&nbsp;{{ site.title }} - {{ page.title }}<br/>
 			<a href="{{ "/" | absolute_url }}">Home</a> | 
 			<a href="{{ "/" | absolute_url }}">Log</a> |
 			<a href="{{ "/" | absolute_url }}">Rules</a> |
