--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -38,7 +38,7 @@
 
 		{% if site.github.private != true and site.github.license %}
 		<div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-			This site is open source. {% github_edit_link "Improve this page" %}.
+			This site is {% github_edit_link "open source" %}.
 		</div>
 		{% endif %}
 	</div>
