--- a/_layouts/public.html
+++ b/_layouts/public.html
@@ -12,35 +12,11 @@
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
-		{% if site.title and site.title != page.title %}
-		<div class="menu-big">
-			<img src="/assets/images/avatar.png" height="26px" width="26px" style="float:left;vertical-align: middle;" /><h3></p>&nbsp;{{ site.title }}
-				<span style="float:right;">
-					<a href="{{ "/" | absolute_url }}">Home</a> | 
-					<a href="{{ "/" | absolute_url }}">Log</a> |
-					<a href="{{ "/" | absolute_url }}">Rules</a> |
-					<a href="{{ "/" | absolute_url }}">Wiki</a> |
-					<a href="{{ "/" | absolute_url }}">Contact</a>
-				</span>
-			</h3>
-		</div>
-		<div class="menu-small"><center><img src="/assets/images/avatar.png" height="56px" width="56px" style="margin-top: -20px;margin-bottom: -20px;" /><h3><span>
-			&nbsp;{{ site.title }}<br/>
-			<a href="{{ "/" | absolute_url }}">Home</a> | 
-			<a href="{{ "/" | absolute_url }}">Log</a> |
-			<a href="{{ "/" | absolute_url }}">Rules</a> |
-			<a href="{{ "/" | absolute_url }}">Wiki</a> |
-			<a href="{{ "/" | absolute_url }}">Contact</a>
-			</span></h3></center></div>
-		{% endif %}
+		{% include navbar/navbar.html %}
 
 		{{ content }}
 
-		{% if site.github.private != true and site.github.license %}
-		<div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-			This site is {% github_edit_link "open source" %}.
-		</div>
-		{% endif %}
+		{% include footer.html %}
 	</div>
 </body>
 </html>
